# c-_templates

./: CMakeLists.txt  README.md  deploy_5_1_3.yml  deploy_6_0.yml
docker/: .dockerignore  DockerFile.dev_5_1_3  DockerFile.dev_6_0  build_docker.sh
src/common/: CMakeLists.txt
src/common/include/: base_model.hpp  benchmark_metrics.hpp  interfaces.hpp  logger.hpp  onnx_session.hpp
src/common/src/: benchmark_metrics.cpp
src/components/: CMakeLists.txt
src/components/object_detection/: CMakeLists.txt
src/components/object_detection/include/: yolox_detector.hpp
src/components/object_detection/src/: yolox_detector.cpp
src/components/object_detection/tests/: CMakeLists.txt  test_object_detection.cpp
src/components/stream_handler/: CMakeLists.txt
src/components/stream_handler/include/: vision_stream_handlers.hpp
src/components/stream_handler/src/: vision_stream_handlers.cpp
src/components/stream_handler/tests/: CMakeLists.txt  test_stream_handler.cpp
src/components/tracker/: CMakeLists.txt
src/components/tracker/include/: sort_tracker.hpp
src/components/tracker/src/: sort_tracker.cpp
src/components/tracker/tests/: CMakeLists.txt  test_tracker.cpp
